--- a/api/src/main/resources/templates/member/recover-username.html
+++ b/api/src/main/resources/templates/member/recover-username.html
@@ -4,7 +4,7 @@
     <title>아이디 찾기</title>
 </head>
 <body>
-<div id="modal" style="display: none;">
+<div id="idModal" style="display: none;">
     <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
             <h2 class="text-xl font-semibold mb-4">🔍 아이디 찾기</h2>
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="flex justify-end">
-                    <button type="button" onclick="recoverUsername();"
+                    <button type="button" onclick="recoverField('email');"
                             class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">확인
                     </button>
                     <button type="button" class="ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm"
