Feat: 지역 필터 기능

--- a/api/src/main/resources/templates/jobstatistic/fragment/jobRequestFrom.html
+++ b/api/src/main/resources/templates/jobstatistic/fragment/jobRequestFrom.html
@@ -22,7 +22,7 @@
         </label>
         <select th:field="*{place}" class="select select-bordered w-full max-w-xs">
             <option value="" disabled selected>지역을 선택해주세요</option>
-            <option value="all">전체</option>
+            <option value="">전체</option>
             <option value="서울">서울</option>
             <option value="경기">경기도</option>
             <option value="충청">충청도</option>
