--- a/api/src/main/resources/templates/article/list.html
+++ b/api/src/main/resources/templates/article/list.html
@@ -176,6 +176,7 @@
             if(userRole === 'premium') {
                 card.style.border = "1px solid #2E2EFE";
                 card.style.backgroundColor = "#CEE3F6";
+                card.style.backgroundImage = "url('https://mblogthumb-phinf.pstatic.net/20160519_47/jango53_1463667092361tjBiX_GIF/jango_p33.gif?type=w2')"
             } else if (userRole === 'free') {
                 card.style.border = "1px solid #BDBDBD";
                 card.style.backgroundColor = "#f1f2f5";
