--- a/api/src/main/resources/templates/payment/payment-page.html
+++ b/api/src/main/resources/templates/payment/payment-page.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="text-center mt-5">
-                    <p class="text-gray-500 text-sm text-center">₩5,900/월 • VAT 포함</p>
+                    <p class="text-gray-500 text-sm text-center">₩5,900 • VAT 포함</p>
                     <button id="payment-button" class="btn btn-lg btn-block mt-2">시작하기</button>
                     <hr class="mb-4 mt-3">
                     <p class="text-gray-500 text-sm text-center">
@@ -57,7 +57,7 @@
 
         button.addEventListener('click', function () {
             tossPayments.requestPayment('카드', {
-                amount: 5900,
+                amount: [[${amount}]],
                 orderId: randomValue,
                 orderName: 'premium',
                 successUrl: window.location.origin + '/payment/success',
